--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project is part of the CMD Tech-Track. It contains the concept and visualization data story for The Volkskrant.",
   "main": "parkingData.js",
   "scripts": {
-    "test": "parcel index.html"
+    "test": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
